--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,22 @@
+# Use official Python image
+FROM python:3.11-slim
 
-# --- Dockerfile ---
-FROM python:3.10-slim
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
+# Create working directory inside container
 WORKDIR /app
 
-COPY . /app
+# Install dependencies
+COPY requirements.txt /app/
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-RUN pip install --upgrade pip \
-    && pip install -r requirements.txt
+# Copy your whole Django app into the container
+COPY . /app/
 
+# Expose Django's default port
+EXPOSE 8000
+
+# Start Django server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
